fix guide button mobile

--- a/portfolio.css
+++ b/portfolio.css
@@ -425,6 +425,10 @@ html,
     .project-tiles a {
         position: relative;
     }
+    #guide-button {
+        position: relative;
+        padding-bottom: 10px;
+    }
     #project-one-headline {
         display: none;
     }
